<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <GridLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:rowCount="3">

        <android.support.v7.widget.CardView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:onClick="entrar3"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/comestibles" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/supermercado"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/electronica" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/electronica"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:orientation="vertical"
               >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/hogar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/hogar"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ferreteria" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/ferreteria"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/deporte" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/deporte"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ninos" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/nino"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/farmacia" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/farmacia"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
              >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/belleza" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/belleza"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView

            android:id="@+id/pruebaicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
              >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/motor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/motor"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/libros" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/libros"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />


            </LinearLayout>


        </android.support.v7.widget.CardView>


    </GridLayout>


</ScrollView>